# Discrete-Math-DTU-tools

./: .gitignore  Exam2025-CORRECTED.typ  README.md  discrete_tools.py  notebook.ipynb  pyproject.toml  test.py
.github/workflows/: ci.yml  release.yml
